--- a/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.scss
@@ -10,8 +10,8 @@
         height: 2.5vw;
     }
 }
-.courseImage{
-    width: 200px;
+.image-db{
+    width: 150px;
     height: 112px;
     border-radius: 16px;
     display: block;
