--- a/AngularFrontEnd/projects/potal/src/app/app.component.scss
+++ b/AngularFrontEnd/projects/potal/src/app/app.component.scss
@@ -118,7 +118,7 @@
   display: block;
   padding-bottom: 0.25rem;
   font-size: large;
-  padding-left: 1rem;
+  text-align: center;
 }
 .center {
   justify-content: center;
