--- a/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.html
+++ b/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.html
@@ -99,8 +99,21 @@
                     <div class="col-12 md:col-4">
                     </div>                     
                 </div>
-                <app-upload-image (onUploadFinished)="uploadFinished($event)"></app-upload-image>
-                <img *ngIf="this.productForm.controls['Image'].value" [src]="createImgPath(this.productForm.controls['Image'].value)" alt="product picture" class="courseImage"> 
+                <div>
+                    <span>Hình ảnh mô tả</span>                    
+                    <img *ngIf="this.productForm.controls['Image'].value" [src]="createImgPath(this.productForm.controls['Image'].value)" alt="product picture" class="image-db mb-2"> 
+                    <app-upload-image (onUploadFinished)="uploadImageFinished($event)"></app-upload-image>
+                </div>
+                <div class="mt-3">
+                    <span style="display: block">Hình ảnh chi tiết</span>                    
+                    <span style="display: inline-block;" class="item" *ngFor="let item of this.productForm.controls['ImageDetail'].value">
+                        <img *ngIf="item" [src]="createImgPath(item)" alt="product picture" class="image-db mr-2">
+                        <div style="display: flex; justify-content: center;" class="mb-2">
+                            <button pButton icon="pi pi-times-circle" pTooltip="Xoá ảnh" tooltipPosition="bottom" class="p-button-rounded p-button-danger mt-2" (click)="removeImage(item)"></button>
+                        </div>                       
+                    </span>
+                    <app-upload-image (onUploadFinished)="uploadImageDetailFinished($event)"></app-upload-image>
+                </div>
                 <div class="pt-2">
                     <button *ngIf="!existedProductId" pButton label="Tạo" class="p-button-rounded p-button-success" type="submit"></button>
                     <button *ngIf="existedProductId" pButton label="Lưu" class="p-button-rounded p-button-success" type="submit"></button>           
