--- a/AngularFrontEnd/projects/features/src/app/lib/upload-image-category/upload-image-category.component.html
+++ b/AngularFrontEnd/projects/features/src/app/lib/upload-image-category/upload-image-category.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="margin-bottom:15px;">
     <div class="col-md-4">
       <input type="file" #file placeholder="Choose file" (change)="uploadFile(file.files)" style="display:none;">
-      <button style="width: max-content;" type="button" class="btn btn-danger" (click)="file.click()">Tải file lên*</button>
+      <button style="width: max-content;" type="button" class="btn btn-danger" (click)="file.click()">Tải file lên</button>
     </div>
   </div>
