--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <div class="block main">
-    <div class="categories">
+    <div class="product-detail">
         <p-card header="Chi tiết sản phẩm">
             <div class="row">
                 <div class="col-5 mt-3">
@@ -84,6 +84,13 @@
                         </div>    
                     </div>
                 </div>
+            </div>
+        </p-card>
+    </div>
+    <div class="product-detail">
+        <p-card header="Đánh giá sản phẩm">
+            <div class="row">
+                
             </div>
         </p-card>
     </div>
