--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.scss
@@ -1,6 +1,6 @@
 .main{
     background-color: #f0f3f8;
-    padding-top: 0.75rem;
+    padding-top: 0.5rem;
     padding-bottom: 0.1rem;
 }
 .price{
@@ -38,7 +38,7 @@
     display: flex;
     max-width: 400px;
 }
-.categories {
+.product-detail {
     margin-top: 20px;
     margin-bottom: 20px;
     position: relative;
