--- a/AngularFrontEnd/projects/features/src/app/login/login.component.html
+++ b/AngularFrontEnd/projects/features/src/app/login/login.component.html
@@ -31,7 +31,7 @@
       <a class="hyper-link" routerLink="../register-user">Bạn chưa có tài khoản?</a>
     </span>    
     <span class="center forgotPassword">
-      <a class="hyper-link" (click)="openForgotPopup()">Quên mật khẩu?</a>
+      <span class="hyper-link" (click)="openForgotPopup()">Quên mật khẩu?</span>
     </span>       
 </p-dialog>
 </form>
