--- a/AngularFrontEnd/projects/features/src/app/register/register.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/register/register.component.scss
@@ -65,6 +65,11 @@ p {
       width: 23vw!important;
     }
   }
+  .register{
+    .mat-mdc-text-field-wrapper{
+      width: 16vw!important;
+    }
+  }
 }
 .hyper-link{
   text-decoration: none;
