--- a/AngularFrontEnd/projects/features/src/app/login/login.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/login/login.component.scss
@@ -59,3 +59,17 @@ p {
   text-decoration: none;
   color:green;
 }
+.example-h2 {
+  margin: 10px;
+}
+
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 0 10px;
+}
