--- a/AngularFrontEnd/projects/potal/src/app/app.component.html
+++ b/AngularFrontEnd/projects/potal/src/app/app.component.html
@@ -2,15 +2,15 @@
   <div class="block">
       <div>
           <div class="menu">
-              <nav *ngIf="currentTab?.includes('admin')" class="routing">
-                  <a [routerLink]="['/user/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>                 
+              <nav *ngIf="currentTab?.includes('admin') || currentTab?.includes('product-detail')" class="routing">
+                  <a *ngIf="userRole != '' && userRole == 'user'" [routerLink]="['/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>                 
                   <a [routerLink]="['/admin/admin-category']" routerLinkActive="active"><b>Danh mục</b></a>
                   <a [routerLink]="['/admin/admin-brand']" routerLinkActive="active"><b>Nhãn hàng</b></a>
                   <a [routerLink]="['/admin/admin-user']" routerLinkActive="active"><b>Tài khoản</b></a>
                   <a [routerLink]="['/admin/admin-order']" routerLinkActive="active"><b>Đơn hàng</b></a>
               </nav>
-              <nav *ngIf="currentTab?.includes('/user')" class="routing">
-                  <a [routerLink]="['/user/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>
+              <nav *ngIf="currentTab?.includes('/user') || currentTab?.includes('home-page')" class="routing">
+                  <a [routerLink]="['/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>
                   <a *ngIf="isAdmin && userData.isLoggedIn" [routerLink]="['/admin']" routerLinkActive="active" style="color: red;"><b>Quản trị</b></a>
                   <a *ngIf="userData.isLoggedIn" [routerLink]="['/user/cart']" routerLinkActive="active"><b>Giỏ hàng</b></a>
                   <a *ngIf="userData.isLoggedIn" [routerLink]="['/user/order']" routerLinkActive="active"><b>Đơn hàng</b></a>                 
@@ -33,7 +33,7 @@
           <span *ngIf="!this.userData.isLoggedIn" class="user-info"><b>Đăng nhập ngay</b>!</span>
           <span *ngIf="this.userData.isLoggedIn" class="user-info">Xin chào <b>{{ loginName }}</b> <i class="small-text">({{ role }})</i></span>
           <button *ngIf="this.userData.isLoggedIn" pButton label="Thông tin cá nhân" class="p-button-rounded p-button-success user-button" (click)="editUser()"></button>
-          <button *ngIf="!this.userData.isLoggedIn" pButton label="Đăng nhập" class="p-button-rounded p-button-round user-button" [routerLink]="['/user/login-user']"></button>
+          <button *ngIf="!this.userData.isLoggedIn" pButton label="Đăng nhập" class="p-button-rounded p-button-round user-button" [routerLink]="['login-user']"></button>
           <button *ngIf="this.userData.isLoggedIn" pButton label="Đăng xuất" class="p-button-rounded p-button-danger user-button" (click)="logout()"></button>
       </div>
   </div>
