--- a/AngularFrontEnd/projects/features/src/app/register/register.component.html
+++ b/AngularFrontEnd/projects/features/src/app/register/register.component.html
@@ -75,6 +75,22 @@
             </td>
             <td>
               <div>
+                <mat-form-field appearance="outline">
+                  <mat-label>Nhập lại mật khẩu</mat-label>
+                  <input matInput formControlName = "ConfirmPassword" name = "ConfirmPassword" required="" [type]="hide ? 'password' : 'text'">
+                  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                  </button>
+                  <mat-error *ngIf="registerForm.get('ConfirmPassword')?.hasError('required')">
+                    Hãy nhập lại mật khẩu!
+                  </mat-error>
+                </mat-form-field>
+              </div> 
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="mr-5">
                 <mat-form-field appearance="fill">
                   <mat-label>Tỉnh/Thành Phố</mat-label>
                   <mat-select formControlName="Provinces">
@@ -86,35 +102,19 @@
                     Hãy chọn tỉnh/thành phố!
                   </mat-error>
                 </mat-form-field>
-              </div> 
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="mr-5">
-                <mat-form-field appearance="fill">
-                  <mat-label>Huyện/Quận</mat-label>
-                  <mat-select formControlName="Districts">
-                      <mat-option *ngFor="let district of districts" [value]="district" >
-                      {{district.name}}
-                      </mat-option>
-                  </mat-select>
-                  <mat-error *ngIf="registerForm.get('Districts')?.hasError('required')">
-                    Hãy chọn huyện/quận!
-                  </mat-error>
-              </mat-form-field>
+                
               </div>
             </td>
             <td>
               <mat-form-field appearance="fill">
-                <mat-label>Xã/Phường</mat-label>
-                <mat-select formControlName="Wards">
-                    <mat-option *ngFor="let ward of wards" [value]="ward">
-                    {{ward.name}}
+                <mat-label>Huyện/Quận</mat-label>
+                <mat-select formControlName="Districts">
+                    <mat-option *ngFor="let district of districts" [value]="district" >
+                    {{district.name}}
                     </mat-option>
                 </mat-select>
-                <mat-error *ngIf="registerForm.get('Wards')?.hasError('required')">
-                  Hãy chọn xã/phường!
+                <mat-error *ngIf="registerForm.get('Districts')?.hasError('required')">
+                  Hãy chọn huyện/quận!
                 </mat-error>
             </mat-form-field>
             </td>
@@ -122,6 +122,17 @@
           <tr>
             <td>
               <div>
+                <mat-form-field appearance="fill">
+                  <mat-label>Xã/Phường</mat-label>
+                  <mat-select formControlName="Wards">
+                      <mat-option *ngFor="let ward of wards" [value]="ward">
+                      {{ward.name}}
+                      </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="registerForm.get('Wards')?.hasError('required')">
+                    Hãy chọn xã/phường!
+                  </mat-error>
+              </mat-form-field>
             </div>   
             </td>
             <td>
@@ -136,7 +147,7 @@
           </tr>
         </table>          
         </div>
-        <p-button class="center registerButton" label="Đăng ký" type="submit" [disabled]="!registerForm.invalid"></p-button> 
+        <p-button class="center registerButton" label="Đăng ký" type="submit"></p-button> 
         <span class="center">
           <a class="hyper-link" routerLink="../login-user">Bạn đã có tài khoản?</a>
         </span> 
