--- a/AngularFrontEnd/projects/potal/src/app/app.component.html
+++ b/AngularFrontEnd/projects/potal/src/app/app.component.html
@@ -4,10 +4,10 @@
           <div class="menu">
               <nav *ngIf="currentTab?.includes('admin') || currentTab?.includes('product-detail')" class="routing">
                   <a [routerLink]="['/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>                 
-                  <a [routerLink]="['/admin/admin-category']" routerLinkActive="active"><b>Danh mục</b></a>
-                  <a [routerLink]="['/admin/admin-brand']" routerLinkActive="active"><b>Nhãn hàng</b></a>
-                  <a [routerLink]="['/admin/admin-user']" routerLinkActive="active"><b>Tài khoản</b></a>
-                  <a [routerLink]="['/admin/admin-order']" routerLinkActive="active"><b>Đơn hàng</b></a>
+                  <a *ngIf="isAdmin" [routerLink]="['/admin/admin-category']" routerLinkActive="active"><b>Danh mục</b></a>
+                  <a *ngIf="isAdmin" [routerLink]="['/admin/admin-brand']" routerLinkActive="active"><b>Nhãn hàng</b></a>
+                  <a *ngIf="isAdmin" [routerLink]="['/admin/admin-user']" routerLinkActive="active"><b>Tài khoản</b></a>
+                  <a *ngIf="isAdmin" [routerLink]="['/admin/admin-order']" routerLinkActive="active"><b>Đơn hàng</b></a>
               </nav>
               <nav *ngIf="currentTab?.includes('/user') || currentTab?.includes('home-page')" class="routing">
                   <a [routerLink]="['/home-page']" routerLinkActive="active"><b>Trang chủ</b></a>
